feat: add header

--- a/src/app/components/header/profile/profile.component.html
+++ b/src/app/components/header/profile/profile.component.html
@@ -1,1 +1,6 @@
-<p>profile works!</p>
+<div class="profile">
+  <span>Your Name</span>
+  <div class="profile__icon">
+    <mat-icon class="profile__account">account_circle</mat-icon>
+  </div>
+</div>
