--- a/src/app/components/header/sort-form/sort-form.component.html
+++ b/src/app/components/header/sort-form/sort-form.component.html
@@ -1,1 +1,9 @@
-<p>sort-form works!</p>
+<div class="sort-form">
+  <span class="sort-form__title">Sorting by:</span>
+  <ul class="sort-form__list">
+    <li class="sort-form__item">date</li>
+    <li class="sort-form__item">count of views</li>
+    <li class="sort-form__item">by word or sentence</li>
+  </ul>
+  <input class="sort-form__input" type="search" />
+</div>
