--- a/src/app/components/header/header/header.component.html
+++ b/src/app/components/header/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<header class="header">
+  <div class="header__container container">
+    <div class="header__search-container">
+      <div class="header__logo" routerLink="/">
+        <img src="../../../../assets/icons/youtube.svg" alt="youtube" width="50" />
+      </div>
+
+      <app-search-form></app-search-form>
+      <button class="header__settings" mat-raised-button color="primary" width="24">
+        <mat-icon class="header__settings-icon">tune</mat-icon>
+      </button>
+    </div>
+
+    <app-profile></app-profile>
+    <app-sort-form></app-sort-form>
+  </div>
+</header>
