--- a/src/app/components/header/search-form/search-form.component.html
+++ b/src/app/components/header/search-form/search-form.component.html
@@ -1,1 +1,10 @@
-<p>search-form works!</p>
+<form class="search-form">
+  <input
+    class="search-form__input"
+    type="search"
+    placeholder="What do you want to find out?"
+  />
+  <button class="search-form__button" type="submit" mat-raised-button color="primary">
+    search
+  </button>
+</form>
