--- a/src/app/components/header/header/header.component.scss
+++ b/src/app/components/header/header/header.component.scss
@@ -28,6 +28,7 @@
     height: 24px;
     min-width: 24px;
     padding: 0;
+    box-shadow: 2px 0px 4px 0px #2979ff;
 
     .mat-icon {
       font-size: 20px;
