--- a/src/app/components/search/search-results/search-results.component.html
+++ b/src/app/components/search/search-results/search-results.component.html
@@ -1,1 +1,5 @@
-<p>search-results works!</p>
+<main class="main">
+  <div class="main__container container">
+    <app-search-item *ngFor="let item of searchItems" [searchItem]="item"></app-search-item>
+  </div>
+</main>
