--- a/src/app/components/header/header/header.component.html
+++ b/src/app/components/header/header/header.component.html
@@ -5,13 +5,23 @@
         <img src="../../../../assets/icons/youtube.svg" alt="youtube" width="50" />
       </div>
 
-      <app-search-form></app-search-form>
-      <button class="header__settings" mat-raised-button color="primary" width="24">
+      <app-search-form (submitSearch)="submitSearchingValue($event)"></app-search-form>
+      <button
+        class="header__settings"
+        mat-raised-button
+        color="primary"
+        (click)="isSortForm = !isSortForm"
+        width="24"
+      >
         <mat-icon class="header__settings-icon">tune</mat-icon>
       </button>
     </div>
 
     <app-profile></app-profile>
-    <app-sort-form></app-sort-form>
+    <app-sort-form
+      *ngIf="isSortForm"
+      (setSortSettings)="submitSortSettings($event)"
+      (setSortingValue)="setSortingValue($event)"
+    ></app-sort-form>
   </div>
 </header>
