--- a/src/app/components/header/search-form/search-form.component.html
+++ b/src/app/components/header/search-form/search-form.component.html
@@ -1,7 +1,10 @@
-<form class="search-form">
+<form class="search-form" (submit)="submitSearchForm()">
   <input
     class="search-form__input"
     type="search"
+    name="searchValue"
+    [(ngModel)]="searchValue"
+    autocomplete="off"
     placeholder="What do you want to find out?"
   />
   <button class="search-form__button" type="submit" mat-raised-button color="primary">
