--- a/src/app/components/header/search-form/search-form.component.html
+++ b/src/app/components/header/search-form/search-form.component.html
@@ -7,7 +7,5 @@
     autocomplete="off"
     placeholder="What do you want to find out?"
   />
-  <button class="search-form__button" type="submit" mat-raised-button color="primary">
-    search
-  </button>
+  <app-custom-button><span>search</span></app-custom-button>
 </form>
