--- a/src/app/components/search/search-item/search-item.component.html
+++ b/src/app/components/search/search-item/search-item.component.html
@@ -19,6 +19,6 @@
   </div>
 
   <h3 class="search-item__title">{{ searchItem.snippet.title }}</h3>
-  <button class="search-item__button" mat-raised-button color="primary">more...</button>
+  <app-custom-button class="search-item__button"><span>more...</span></app-custom-button>
   <div class="search-item__status" [appStatusColor]="searchItem.snippet.publishedAt"></div>
 </div>
