fix: fix logo path

--- a/src/app/components/header/header/header.component.html
+++ b/src/app/components/header/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="header__container container">
     <div class="header__search-container">
       <div class="header__logo" routerLink="/">
-        <img src="../../../../assets/icons/youtube.svg" alt="youtube" width="50" />
+        <img src="./assets/icons/youtube.svg" alt="youtube" width="50" />
       </div>
 
       <app-search-form (submitSearch)="submitSearchingValue($event)"></app-search-form>
