--- a/src/app/core/components/profile/profile.component.html
+++ b/src/app/core/components/profile/profile.component.html
@@ -3,4 +3,7 @@
   <div class="profile__icon">
     <mat-icon class="profile__account">account_circle</mat-icon>
   </div>
+  <app-custom-button *ngIf="isLoggedIn()" (click)="logout()"
+    ><mat-icon>logout</mat-icon></app-custom-button
+  >
 </div>
