--- a/src/app/core/pages/not-found/not-found.component.html
+++ b/src/app/core/pages/not-found/not-found.component.html
@@ -1,1 +1,6 @@
-<p>not-found works!</p>
+<div class="not-found">
+  <div class="not-found__img" routerLink="/">
+    <img src="./assets/icons/404.svg" alt="404" width="100" />
+  </div>
+  <h3 class="not-found__descr">Sorry, smth went wrong((</h3>
+</div>
