feat: add YouTube API and interceptor

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header__container container">
     <div class="header__search-container">
-      <div class="header__logo" routerLink="/">
+      <div class="header__logo" routerLink="/youtube">
         <img src="./assets/icons/youtube.svg" alt="youtube" width="50" />
       </div>
 
