--- a/src/app/core/components/search-form/search-form.component.html
+++ b/src/app/core/components/search-form/search-form.component.html
@@ -1,11 +1,10 @@
-<form class="search-form" (submit)="submitSearchForm()">
+<form class="search-form">
   <input
     class="search-form__input"
     type="search"
-    name="searchValue"
-    [(ngModel)]="searchValue"
+    [value]="searchValue$ | async"
+    (keyup)="searchVideo($event)"
     autocomplete="off"
     placeholder="What do you want to find out?"
   />
-  <app-custom-button><span>search</span></app-custom-button>
 </form>
