--- a/src/app/youtube/pages/search-results/search-results.component.html
+++ b/src/app/youtube/pages/search-results/search-results.component.html
@@ -1,4 +1,4 @@
-<main *ngIf="searchService.searchValue" class="main">
+<main *ngIf="youtubeService.isResults" class="main">
   <div class="main__container container">
     <app-search-item
       *ngFor="
