feat: add user name

--- a/src/app/core/components/profile/profile.component.html
+++ b/src/app/core/components/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="profile" routerLink="/auth">
-  <span>Your Name</span>
+  <span>{{ userName || 'Your Name' }}</span>
   <div class="profile__icon">
     <mat-icon class="profile__account">account_circle</mat-icon>
   </div>
