fix: fix minor bugs

--- a/src/app/core/components/profile/profile.component.html
+++ b/src/app/core/components/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="profile" routerLink="/auth">
+<div class="profile">
   <span>{{ userName || 'Your Name' }}</span>
   <div class="profile__icon">
     <mat-icon class="profile__account">account_circle</mat-icon>
