--- a/src/app/youtube/pages/detailed-info/detailed-info.component.html
+++ b/src/app/youtube/pages/detailed-info/detailed-info.component.html
@@ -7,7 +7,7 @@
     <mat-icon class="info__icon">arrow_back_ios_new</mat-icon>
   </app-custom-button>
   <div class="info__preview">
-    <img class="info__image" alt="preview" [src]="searchItem.snippet.thumbnails.standard.url" />
+    <img class="info__image" alt="preview" [src]="searchItem.snippet.thumbnails.medium.url" />
   </div>
   <div class="info__container">
     <div class="info__title">
