--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -7,11 +7,12 @@
         class="login__input"
         type="text"
         formControlName="login"
-        placeholder="Done Joe"
+        placeholder="user@gmail.com"
         matInput
         autocomplete="off"
       />
-      <mat-error *ngIf="getLoginError('required')">Enter a login!</mat-error>
+      <mat-error *ngIf="getLoginError('required')">Please enter a login email!</mat-error>
+      <mat-error *ngIf="getLoginError('email')">The login email is invalid!</mat-error>
     </mat-form-field>
 
     <mat-form-field class="login__field" appearance="fill">
@@ -24,8 +25,11 @@
         matInput
         autocomplete="off"
       />
-      <mat-error *ngIf="getPasswordError('required')">Enter a password!</mat-error>
-      <mat-error *ngIf="getPasswordError('pattern')">Password isn't strong enough!</mat-error>
+      <mat-error *ngIf="getPasswordError('required')">Please enter a password!</mat-error>
+      <mat-error *ngIf="getPasswordError('pattern')"
+        >Your password isn't strong enough! <br>(min 8 characters, uppercase and lowercase letters,
+        numbers, special character)</mat-error
+      >
     </mat-form-field>
 
     <button
