--- a/src/app/auth/pages/login/login.component.scss
+++ b/src/app/auth/pages/login/login.component.scss
@@ -6,7 +6,7 @@
 
 .login {
   width: 350px;
-  height: 300px;
+  height: 350px;
   border-radius: 5px;
   padding: 25px;
   background: #f2f2f2;
@@ -30,6 +30,7 @@
   }
 
   &__button {
+    margin-top: 42px;
     width: 120px;
     height: 32px;
     border-radius: 5px;
