--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -11,8 +11,8 @@
         matInput
         autocomplete="off"
       />
-      <mat-error *ngIf="getLoginError('required')">Please enter a login email!</mat-error>
-      <mat-error *ngIf="getLoginError('email')">The login email is invalid!</mat-error>
+      <mat-error *ngIf="getLoginError('required')">Please enter a login email</mat-error>
+      <mat-error *ngIf="getLoginError('email')">The login email is invalid</mat-error>
     </mat-form-field>
 
     <mat-form-field class="login__field" appearance="fill">
@@ -25,9 +25,9 @@
         matInput
         autocomplete="off"
       />
-      <mat-error *ngIf="getPasswordError('required')">Please enter a password!</mat-error>
-      <mat-error *ngIf="getPasswordError('pattern')"
-        >Your password isn't strong enough! <br>(min 8 characters, uppercase and lowercase letters,
+      <mat-error *ngIf="getPasswordError('required')">Please enter a password</mat-error>
+      <mat-error *ngIf="getPasswordError('pattern')">
+        Your password isn't strong enough! <br />(min 8 characters, uppercase and lowercase letters,
         numbers, special character)</mat-error
       >
     </mat-form-field>
