feat: add admin button

--- a/src/app/admin/pages/creation-form/creation-form.component.scss
+++ b/src/app/admin/pages/creation-form/creation-form.component.scss
@@ -40,11 +40,14 @@
     border: none;
     background-color: #2979ff;
     color: #ffffff;
+    cursor: pointer;
     &:disabled {
       background-color: #c5c5c5;
       color: #575757;
+      cursor: auto;
     }
   }
+
   &__add-button {
     width: 32px;
     margin-bottom: 20px;
