--- a/src/app/auth/pages/login/login.component.scss
+++ b/src/app/auth/pages/login/login.component.scss
@@ -6,7 +6,7 @@
 
 .login {
   width: 350px;
-  height: 300px;
+  height: 350px;
   border-radius: 5px;
   padding: 25px;
   background: #f2f2f2;
@@ -30,15 +30,18 @@
   }
 
   &__button {
+    margin-top: 42px;
     width: 120px;
     height: 32px;
     border-radius: 5px;
     border: none;
     background-color: #2979ff;
     color: #ffffff;
+    cursor: pointer;
     &:disabled {
       background-color: #c5c5c5;
       color: #575757;
+      cursor: auto;
     }
   }
 }
