--- a/src/app/components/search-item/search-item.component.scss
+++ b/src/app/components/search-item/search-item.component.scss
@@ -25,6 +25,13 @@
     font-size: 10px;
     justify-content: space-between;
     padding: 0 10px;
+
+    span {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 5px;
+    }
   }
 
   &__icon {
