--- a/src/app/youtube/components/statistics/statistics.component.scss
+++ b/src/app/youtube/components/statistics/statistics.component.scss
@@ -2,9 +2,16 @@
   display: flex;
   font-size: 10px;
   justify-content: space-between;
-  padding: 0 10px;
+  gap: 20px;
 
   &__icon {
     font-size: 20px;
+  }
+
+  span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
   }
 }
