--- a/src/app/components/search-item/search-item.component.scss
+++ b/src/app/components/search-item/search-item.component.scss
@@ -38,6 +38,24 @@
     font-size: 20px;
   }
 
+  &__close {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    padding: 2px 0px;
+    width: 24px;
+    height: 24px;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 3px -1px 5px rgba(51, 51, 51, 0.5);
+    transition: 0.5s;
+    &:hover {
+      box-shadow: -1px 5px 5px rgba(51, 51, 51, 0.3);
+    }
+  }
+
   &__title {
     margin: 10px 10px 0;
     font-size: 1.25rem;
