--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -6,9 +6,14 @@
       </div>
 
       <app-search-form></app-search-form>
-      <app-custom-button class="header__settings" (click)="isSortForm = !isSortForm" width="24">
+      <app-custom-button
+        class="header__settings"
+        (click)="sortService.toggleSortForm(!isSortForm)"
+        width="24"
+      >
         <mat-icon class="header__settings-icon">tune</mat-icon>
       </app-custom-button>
+      <app-custom-button routerLink="/favorite"><span>Favorite</span></app-custom-button>
     </div>
 
     <app-profile></app-profile>
