--- a/src/app/core/components/profile/profile.component.html
+++ b/src/app/core/components/profile/profile.component.html
@@ -1,10 +1,12 @@
 <div class="profile">
-  <span>{{ userName || 'Your Name' }}</span>
+  <span class="user-name">{{ userName || 'Your Name' }}</span>
   <div class="profile__icon">
     <mat-icon class="profile__account">account_circle</mat-icon>
   </div>
-  <app-custom-button class="profile__button" (click)="logout()"
-    ><span>{{ getButtonName() }}</span></app-custom-button
+  <app-custom-button class="profile__button" (click)="logout()">
+    <span class="button-name">{{ getButtonName() }}</span>
+  </app-custom-button>
+  <app-custom-button class="profile__button" *ngIf="userName" routerLink="/admin"
+    ><span>Admin</span></app-custom-button
   >
-  <app-custom-button class="profile__button" *ngIf="userName" routerLink="/admin"><span>Admin</span></app-custom-button>
 </div>
